[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[features]

[dependencies]
criterion = "0.5.1"
rand = "0.8"
gimli = { version = "0.30", default-features = false, features = ["read"] }
macho-unwind-info = { version = "0.4.0", optional = true }
pe-unwind-info = { version = "0.2.1", optional = true }
fallible-iterator = "0.3.0"
arrayvec = { version = "0.7.4", default-features = false }
cfg-if = "1.0.0"
libc = "0.2"
backtrace = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.mach]
version = "0.3"
mach = "0.3.2"

[dev-dependencies]
framehop = "0.12"
object = "0.36"
flate2 = "1.0.28"
itertools = "0.13"
wholesym = { path = "../wholesym" }
tokio = "1.38.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.42"

[[bench]]
name = "framehop_vs_backtrace"
path = "framehop_vs_backtrace.rs"
harness = false

[profile.release]
debug = true