[package]
name = "examples"
version = "0.12.1"
edition = "2021"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Stack frame unwinding support for various formats"
keywords = ["unwind", "stackwalk", "profiling", "debug"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
documentation = "https://docs.rs/framehop/"
repository = "https://github.com/mstange/framehop/"
exclude = ["/.github", "/.vscode", "/tests", "/fixtures", "/big-fixtures"]

[dependencies]
gimli = { version = "0.30", default-features = false, features = ["read"] }
macho-unwind-info = { version = "0.4.0", optional = true }
pe-unwind-info = { version = "0.2.1", optional = true }
fallible-iterator = "0.3.0"
arrayvec = { version = "0.7.4", default-features = false }
cfg-if = "1.0.0"
libc = "0.2"
mach = "0.3.2"

[features]
default = ["std", "macho", "pe"]
macho = ["macho-unwind-info"]
pe = ["pe-unwind-info"]
std = ["arrayvec/std", "gimli/std"]

[dev-dependencies]
framehop = "0.12"
object = "0.36"
flate2 = "1.0.28"
itertools = "0.13"
wholesym = { path = "../wholesym" }
tokio = "1.38.0"
backtrace = "0.3"

[[example]]
name = "hello"
path = "hello.rs"

[[example]]
name = "parent"
path = "parent.rs"

[[example]]
name = "linux_resolve_aslr"
path = "linux_resolve_aslr.rs"

[[example]]
name = "linux_unwind_and_resolve_symbol"
path = "linux_unwind_and_resolve_symbol.rs"
