[package]
name = "framehop_utils"
version = "0.1.0"
edition = "2021"
categories = ["development-tools::debugging"]
description = "Stack frame unwinding support for various formats"
keywords = ["unwind", "stackwalk", "profiling", "debug"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
documentation = "https://docs.rs/framehop/"
repository = "https://github.com/mstange/framehop/"
exclude = ["/.github", "/.vscode", "/tests", "/fixtures", "/big-fixtures"]

[dependencies]
# fallible-iterator = "0.3.0"
framehop = "0.12"
wholesym = { path = "../wholesym" }

[features]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] } # Feature "macros" for #[tokio::test]
criterion = "0.5.1"
backtrace = "0.3"

[[bench]]
name = "framehop_vs_backtrace"
path = "benches/framehop_vs_backtrace.rs"
harness = false
